# vivado-mcp

./: .gitignore  README.md  pyproject.toml
src/vivado_mcp/: __init__.py  config.py  server.py
src/vivado_mcp/vivado/: __init__.py  build.py  clean.py  detection.py  session.py
tests/: __init__.py  test_build.py  test_clean.py  test_config.py  test_detection.py  test_session.py
